samples/_failures_safe/1761594739_84573e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_859ba9a3.c: In function ‘print_token’:
./samples/SAFE/__tmp_859ba9a3.c:176:12: error: missing terminating " character
  176 |     printf("Line %d, Column %d: %s
      |            ^~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_859ba9a3.c:176:5: error: expected expression at end of input
  176 |     printf("Line %d, Column %d: %s
      |     ^~~~~~
./samples/SAFE/__tmp_859ba9a3.c:176:5: error: expected declaration or statement at end of input
